Fixed media query issue where search button overlaps suggestions heading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,7 +356,7 @@ h5 {
 
 /* MOBILE */
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: 1075px){
     
     #four-cards{
         position: relative;
